# HelloWorld

./: CMakeLists.txt
.github/workflows/: build_cmake.yml
app/: CMakeLists.txt
app/src/: main.cpp
include/: interface.hpp
libraries/test-lib/include/: interface.hpp
libraries/test-lib/src/: interface.cpp
src/: interface.cpp
